# ecs

./: .gitignore  CMakeLists.txt
src/: CPosition.cpp  CPosition.h  EBall.h  SMovement.cpp  SMovement.h  main.cpp
src/ecs/: Component.cpp  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  System.cpp  System.h  Timer.cpp  Timer.h
